# miHub

./: index.html  package.json  requirements.txt  vite.config.ts
.github/workflows/: main.yml
config/: logConfiguration.json
data/: database.py  hoyolab.db
data/database_scripts/: hoyolab_users.sql  hoyolab_users_redeemed_codes.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: checkin.rs  lib.rs  main.rs  process_call.rs  promo_code.rs
src-tauri/src/handlers/: mod.rs  updater.rs
src/components/: index.ts
src/components/button/: index.css  index.tsx
src/components/context/: contextProvider.tsx
src/components/input/: index.css  index.tsx
src/components/select/: index.css  index.tsx
src/components/sidebar/: index.css  index.tsx
src/hooks/: dailyCheckinForm.ts
src/hoyolab/: __init__.py  account.py  checkin.py  promo_code.py
src/hoyolab/auto_start/: __init__.py  daily_checkin.py  promo_code_redeem.py
src/pages/checkinForm/: index.css  index.tsx
