[package]
name = "mihub"
version = "0.0.1"
description = "Mihoyo Games' platform wrapper and launcher"
authors = ["Snootic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.2.3", features = [ "tray-icon" ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
pyo3 = { version = "0.23.5" }
#pyo3-async-runtimes = { version = "0.23", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.43.0", features = ["process", "macros"] }
reqwest = "0.12.12"
ripunzip = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
auto-initialize = ["pyo3/auto-initialize"]
default = ["auto-initialize"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
